--- a/src/styles/pixel.css
+++ b/src/styles/pixel.css
@@ -3774,8 +3774,14 @@ button.section-black:focus {
   color: white;
 }
 
-.card-tertiary .card-header {
+/* 선택된 window header색상만 #000181로 변경  */
+.card-tertiary .card-header.selected {
   background: #000181;
+  color: white;
+}
+
+.card-tertiary .card-header {
+  /* background: #000181; */
   color: white;
 }
 
@@ -3797,18 +3803,30 @@ button.section-black:focus {
 
 .card-body {
   padding: 2px;
-  /* border-top: 2px solid #bdbdbd;
-  border-left: 3px solid #bdbdbd;
-  border-right: 3px solid #bdbdbd;
-  border-bottom: 2px solid #bdbdbd; */
+  overflow-y: auto;
+  height: calc(100% - 62px);
+}
+
+.card-body.doc {
+  padding: 2px;
+  /* overflow-y: auto; */
+  height: calc(100% - 30px);
+}
+
+.doc-link {
+  color: #73716e;
+  text-decoration: underline;
+  text-decoration-color: #c6c6c4;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.doc-link:visited {
+  color: #73716e;
+  text-decoration-color: #c6c6c4;
 }
 
 .card-footer {
-  /* padding: 10px 7px;
-  border-top: 2px solid #bdbdbd;
-  border-left: 3px solid #bdbdbd;
-  border-right: 3px solid #bdbdbd;
-  border-bottom: 2px solid #bdbdbd; */
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -3835,14 +3853,14 @@ button.section-black:focus {
 .folder-content {
   display: flex;
   width: 100%;
-  height: 100%;
-  /* height: calc(100% - 38px); */
+  /* height: 100%; */
+  height: calc(100% - 38px);
+  /* overflow-y: auto; */
 }
 
 .folder-box {
-  flex: 1;
   display: flex;
-  height: 233px;
+  height: 100%;
   width: 100%;
   padding: 20px;
   background-color: #ffffff;
@@ -3850,6 +3868,23 @@ button.section-black:focus {
   border-left: 2px solid #08080e;
   border-right: 2px solid #fcfcfc;
   border-bottom: 2px solid #fcfcfc;
+}
+
+/* doc card */
+.doc-box {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  height: calc(100% - 38px);
+  width: 100%;
+  padding: 30px 80px;
+  background-color: #fcfcfc;
+  border-top: 2px solid #08080e;
+  border-left: 2px solid #08080e;
+  border-right: 2px solid #fcfcfc;
+  border-bottom: 2px solid #fcfcfc;
+  color: #37352f;
+  /* overflow-y: auto; */
 }
 
 /**
@@ -6812,10 +6847,10 @@ a:hover,
   font-weight: 300;
 }
 
-.font-medium {
+/* .font-medium {
   font-size: 1.25rem;
   font-weight: 300;
-}
+} */
 
 .text-primary,
 .text-primary:hover {
