--- a/src/styles/pixel.css
+++ b/src/styles/pixel.css
@@ -3852,7 +3852,13 @@ button.section-black:focus {
 .card-body {
   padding: 2px;
   overflow: hidden;
-  height: calc(100% - 62px);
+  height: calc(100% - 63px);
+}
+
+.card-body.info {
+  padding: 2px;
+  overflow: hidden;
+  height: calc(100% - 30px);
 }
 
 .card-body.doc {
@@ -5581,11 +5587,17 @@ textarea[resize="horizontal"] {
 
 .tab-content {
   background: #c0c0c0;
-  padding: 1rem 1.4rem;
+  padding: 20px;
+  /* border-top: 2px solid #ffffff; */
+  border-left: 2px solid #ffffff;
+  border-right: 2px solid #393939;
+  border-bottom: 2px solid #393939;
+  height: 400px;
 }
 
 .nav-tabs {
-  border-bottom: 2px solid #dededf;
+  padding-left: 2px;
+  border-bottom: 2px solid #ffffff;
 }
 
 .nav-tabs .nav-item {
@@ -5593,10 +5605,46 @@ textarea[resize="horizontal"] {
   margin-bottom: 0;
   background: #c0c0c0;
   color: black;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  border-right: 1px solid #5a5a5a;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
   box-sizing: border-box;
+  border-top: 2px solid #ffffff;
+  border-left: 2px solid #ffffff;
+  border-right: 2px solid #393939;
+  /* border-bottom: 2px solid #ffffff; */
+  /* border-bottom: 2px solid #393939; */
+  padding-bottom: 3px;
+  cursor: pointer;
+}
+
+.nav-tabs .nav-item .nav-text {
+  position: relative;
+  padding: 0 10px;
+  font-size: 11px;
+  font-style: italic;
+  box-sizing: border-box;
+  transform: none;
+}
+
+.nav-tabs .nav-item.active .nav-text {
+  padding: 0 10px;
+  font-size: 11px;
+  font-style: italic;
+  box-sizing: border-box;
+  transform: none;
+  /* background: #c0c0c0; */
+}
+
+.nav-tabs .nav-item.active .nav-text:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 3px;
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  background: #c0c0c0;
+  /* background: #000000; */
 }
 
 .nav-tabs .nav-item .nav-link {
